--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
 encryption.salt.rounds=10
+
+jwt.algorithm.key=SuperSecureSecretKey
+jwt.issuer=eCommerce
+jwt.expiryInSeconds=604800
