--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ecommerce-backend
 
-spring.datasource.url=jdbc:postgresql://${PG_HOST}/mongo
+# Database connection & configuration
+spring.datasource.url=jdbc:postgresql://${PG_HOST}/mango
 spring.datasource.username=${PG_USER}
 spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,11 +9,24 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
+# Swagger configuration
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
+# Encryption configuration
 encryption.salt.rounds=10
 
+# JWT configuration
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
+
+# Email configuration
+email.from=no-reply@ecommerce.com
+
+# General configuration
+app.frontend.url=http://ecommerce.com
+
+# SMTP configuration
+spring.mail.host=localhost
+spring.mail.port=25
